--- a/pom.xml
+++ b/pom.xml
@@ -8,11 +8,12 @@
         <version>v4.8.0.1</version>
     </parent>
 
+    <groupId>com.github.xjw580</groupId>
     <artifactId>hs-script-card-sdk</artifactId>
     <version>1.0.0</version>
     <packaging>jar</packaging>
 
-    <name>Hearthstone-Script-Card-SDK</name>
+    <name>hs-script-card-sdk</name>
     <url>http://maven.apache.org</url>
 
     <properties>
@@ -93,11 +94,11 @@
             <classifier>win</classifier>
         </dependency>
         <dependency>
-            <groupId>club.xiaojiawei</groupId>
+            <groupId>com.github.xjw580</groupId>
             <artifactId>hs-script-base</artifactId>
         </dependency>
         <dependency>
-            <groupId>club.xiaojiawei</groupId>
+            <groupId>com.github.xjw580</groupId>
             <artifactId>hs-script-plugin-sdk</artifactId>
         </dependency>
     </dependencies>
