--- a/pom.xml
+++ b/pom.xml
@@ -5,12 +5,12 @@
     <parent>
         <groupId>com.github.xjw580.Hearthstone-Script</groupId>
         <artifactId>hs-script</artifactId>
-        <version>v4.13.1-BETA</version>
+        <version>v4.14.0-GA</version>
     </parent>
 
     <groupId>com.github.xjw580</groupId>
     <artifactId>hs-script-card-sdk</artifactId>
-    <version>1.2.2</version>
+    <version>1.2.3</version>
     <packaging>jar</packaging>
 
     <name>hs-script-card-sdk</name>
