--- a/pom.xml
+++ b/pom.xml
@@ -5,12 +5,12 @@
     <parent>
         <groupId>com.github.xjw580.Hearthstone-Script</groupId>
         <artifactId>hs-script</artifactId>
-        <version>v4.14.0-GA</version>
+        <version>v4.14.0.1-BETA</version>
     </parent>
 
     <groupId>com.github.xjw580</groupId>
     <artifactId>hs-script-card-sdk</artifactId>
-    <version>1.2.3</version>
+    <version>1.2.4</version>
     <packaging>jar</packaging>
 
     <name>hs-script-card-sdk</name>
@@ -84,6 +84,10 @@
     </build>
 
     <dependencies>
+        <dependency>
+            <groupId>net.bytebuddy</groupId>
+            <artifactId>byte-buddy</artifactId>
+        </dependency>
         <!--连接数据库需要-->
         <dependency>
             <groupId>org.springframework</groupId>
